Header fixes
– Fixed logotype not visible on subpages while on top
– Fixed opacity value

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,10 +13,10 @@
     font-weight: 700;
     height: auto;
     padding: 15px 15px 8px;
-    color: $background-color;
+    color: $grayscale-dark;
     line-height: inherit;
     opacity: 0;
-
+    
     &:focus {
       outline: none;
     }
@@ -34,7 +34,7 @@
   }
 
   .navbar-brand.page-scroll {
-    opacity: 100;
+    opacity: 1;
   }
 
   a {
@@ -130,7 +130,7 @@
 
     path {
         color: #000;
-        fill: #fff;
+        fill: $grayscale-dark;
     }
 }
 
